[package]
name = "contract"
version = "0.6.0"
authors = ["Eugene The Dream <ek@proximity.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.7"
near-contract-standards = "=4.0.0-pre.7"
near-sys = "=0.1"
uint = { version = "=0.9.0", default-features = false }
common = { path = "../common/" }
once_cell = "=1.8.0"

[dev-dependencies]
rand = "0.8"
